--- a/Ex01/index_1.html
+++ b/Ex01/index_1.html
@@ -11,5 +11,9 @@
   </head>
   <body>
     <h1 class="display-1">Hello bootstrap</h1>
+    <div class="min-vw-100">Min-width 100vw</div>
+<div class="min-vh-100">Min-height 100vh</div>
+<div class="vw-100">Width 100vw</div>
+<div class="vh-100">Height 100vh</div>
   </body>
 </html>
